Amicar/src/objects/Modelo_de_vehiculo__c.object
<CustomObject>
    <fields>
        <fullName>Codigo_modelo__c</fullName>
        <externalId>true</externalId>
        <label>Código modelo</label>
        <length>5</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Marca_Busqueda__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Marca</label>
        <referenceTo>Marca__c</referenceTo>
        <relationshipLabel>Modelos de vehículos</relationshipLabel>
        <relationshipName>Modelos_de_veh_culos</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Marca__c</fullName>
        <label>Marca</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Marcas</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Modelo__c</fullName>
        <label>Modelo</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>Modelo de vehículo</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Codigo_modelo__c</columns>
        <columns>Marca__c</columns>
        <columns>Marca_Busqueda__c</columns>
        <filterScope>Everything</filterScope>
        <label>Todos</label>
    </listViews>
    <nameField>
        <label>Modelo</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Modelos de vehículos</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>